cloud-formation-demos/minimal-ec2-deploy.template.yml
---
AWSTemplateFormatVersion: '2010-09-09'

# Just run an EC2 with in a Default VPC/subnet with a sample program on it.

Parameters:
  PrivateKeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: The name of the private key file to use for SSH/RDP access to the instance, if needed.

  VPC:
    Type: AWS::EC2::VPC::Id
    Description: Select a VPC, one with public subnets

  PublicSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: Select a public subnet in your selected VPC.  The web server will run here.

Resources:

  # Security Group for the web server.  Allow HTTP and SSH from anywhere:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Web server
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: WebServerSecurityGroup
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0

  # web server:
  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [ AmazonLinuxAMI, !Ref "AWS::Region", AMI]  # We lookup AMI in the region map
      InstanceType: t2.micro                                          # Any instance type will do
      KeyName: !Ref PrivateKeyName                                    # We get the keypair name from the input parameters
      NetworkInterfaces:
      - DeviceIndex: 0
        AssociatePublicIpAddress: true                                # We will need a public IP address
        SubnetId: !Ref PublicSubnet                                   # We should sit in a public subnet.
        GroupSet: [ !Ref WebServerSecurityGroup ]                     # Attach the security group
      UserData:      #  This code installs a demo Java/Spring app.  Then it signals completion:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Update the OS and get Java
          yum -y update
          yum install wget java-1.8.0 -y
          # Download Java/Spring app:
          wget https://kk-uploads-oregon.s3.amazonaws.com/spring-cloud-aws-environment-demo-1.war
          mv spring-cloud-aws-environment-demo-1.war  app.war
          chmod +x app.war
          # Move app to var folders:
          mkdir /var/app
          mv app.war /var/app
          # Run app as service by creating app.service file:
          cat > app.service <<EOF
          [Unit]
          Description=Spring Boot Demo
          
          [Service]
          SuccessExitStatus=143
          TimeoutStartSec=30
          TimeoutStopSec=10
          Restart=on-failure
          RestartSec=5
          ExecStart=/usr/bin/java -jar /var/app/app.war --server.port=80
          
          [Install]
          WantedBy=multi-user.target
          EOF
          mv app.service /etc/systemd/system/
          # Run Java Spring app as service:
          systemctl daemon-reload
          systemctl enable app.service
          systemctl start app
          /opt/aws/bin/cfn-signal --resource WebServer --stack ${AWS::StackName}  --region ${AWS::Region}
    CreationPolicy:
      ResourceSignal:
        Count: 1
        Timeout: PT3M

Mappings:
  #  This is just the Amazon Linux 2 AMI.  These values change every few months:  
  AmazonLinuxAMI:
    us-east-1:
      AMI: ami-0b69ea66ff7391e80    # N Virginia
    us-east-2:
      AMI: ami-00c03f7f7f2ec15c3    # Ohio      
    us-west-1:
      AMI: ami-0245d318c6788de52    # N California
    us-west-2:
      AMI: ami-04b762b4289fba92b    # Oregon
    eu-west-1:
      AMI: ami-0ce71448843cb18a1    # Ireland
    eu-central-1:
      AMI: ami-0f5dbc86dd9cbf7a8    # Frankfurt
    sa-east-1:
      AMI: ami-0ad7b0031d41ed4b9    # Sao Paulo
    ap-southeast-1:
      AMI: ami-01da99628f381e50a    # Singaport
    ap-southeast-2:
      AMI: ami-00e17d1165b9dd3ec    # Sydney
    ap-northeast-1:
      AMI: ami-08847abae18baa040    # Tokyo


Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - Label: 
          default: "Please supply the following"
        Parameters: 
          - VPC
          - PublicSubnet
          - PrivateKeyName
        

# Finally, what we should see when we are all done.  The ELB's DNS name is the URL of our website:
Outputs:
  WebServerIpAddress:
    Description: IP Address of the web server
    Value: !Sub http://${WebServer.PublicIp}
